--- a/index.html
+++ b/index.html
@@ -624,8 +624,8 @@
                 <div class="hero-text">
                     <h1>Akshitha <span>Reddy</span></h1>
                     <p>Second-year IT student utilizing expertise in C++, Python, Java, and full-stack web development to contribute to the creation of innovative and scalable software solutions. I aim to work in a collaborative, growth-oriented environment to enhance my technical skills and deliver impactful, user-centric applications.</p>
-                    <a href="https://drive.google.com/file/d/1Yv-XKNNbVQ_O3h74CU5XXGDoHkWQteAT/view?usp=sharing" target="_blank" class="btn">View My Resume</a>
-                    <a href="https://drive.google.com/uc?export=download&id=1Yv-XKNNbVQ_O3h74CU5XXGDoHkWQteAT" class="btn" download>Download Resume</a>
+                    <a href="https://drive.google.com/file/d/1lfwQt-eylWMVx5o0tb4NwXk4ns_7JuOk/view?usp=sharing" target="_blank" class="btn">View My Resume</a>
+                    <a href="https://drive.google.com/file/d/1lfwQt-eylWMVx5o0tb4NwXk4ns_7JuOk/view?usp=sharing" class="btn" download>Download Resume</a>
                 </div>
             </div>
         </div>
